# s2_1st_tournament_stats

./: .gitignore  .pre-commit-config.yaml  .pyproject.toml.swp  README.md  build  convert_readme.py  dockerfile-s2stats  game_1666666666000.json  game_downloader.py  index.html  index.md  mkdocs.yml  pyproject.toml  recalculate  recalculate_and_build_docs  recalculate_and_build_docs_docker  requirements.txt  s2_stats.ipynb  shell.nix  stats_feature_correlation.ipynb  stats_maps_trends.html  stats_maps_trends.ipynb  stats_ranked.ipynb  stats_tournament.ipynb  stats_weapon_impact.ipynb  stats_weapon_usage_trends.ipynb  stats_weapon_usage_trends_v2.ipynb  stats_weapon_win_correlation_info.ipynb  stats_weapon_win_correlation_ranked.ipynb  stats_weapon_win_correlation_wm.ipynb  stats_weapon_win_correlation_wm_previous.ipynb  stats_weapon_win_correlation_wm_previous2.ipynb  weapon_usage_trends.ipynb
data/: wu2_ra_21_ChainsawKnifeMakarovRPG.csv  wu2_ra_21_DeaglesMP5SteyrAUGKalashnikovSpas12M79DragunovBarrettRocketLauncherRheinmetallMinigun.csv  wu2_ra_7_ChainsawKnifeMakarovRPG.csv  wu2_ra_7_DeaglesMP5SteyrAUGKalashnikovSpas12M79DragunovBarrettRocketLauncherRheinmetallMinigun.csv
docs/: 404.html  index.html  search.html  sitemap.xml
fixtures/: game_1666666666000.json
logs/: game_1671302677576.json  game_1671302698924.json  game_1671304340325.json  game_1671304363563.json  game_1671307615917.json  game_1671311397338.json  game_1671311403164.json  game_1671311410579.json  game_1671314186355.json  game_1671316964926.json  game_1671317168468.json
s2_analytics/: constants.py  (+21 more)
(+5968 files in other folders)
