[tool.poetry]
name = "repo-s2-stats"
version = "0.1.0"
description = ""
authors = ["Vndl <vndl>"]
readme = "README.md"
packages = [{include = "repo_s2_stats"}]

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.12.2"
pandas = "^1.5.3"
numpy = "^1.24.1"
jupyter = "^1.0.0"
papermill = "^2.4.0"
mkdocs-callouts = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
