[tool.poetry]
name = "s2-analytics"
version = "0.1.0"
description = ""
authors = ["Vndl <vndl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.12.2"
pandas = "^1.5.3"
numpy = "^1.24.1"
jupyter = "^1.0.0"
papermill = "^2.4.0"
mkdocs-callouts = "^1.9.0"
mkdocs = "^1.4.2"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
